# Kea_SI_2024_Spring

./: .gitignore  README.md  package-lock.json  package.json
.mandatory_1/01a._File_Bonanza/: me.xml  me.yaml
.mandatory_1/04a._Real-time_Communication/: app.js
.mandatory_1/04b_Database_Granular_Access/: drop-test-data.sql  granulardb-documentation.md  granulardb-setup.sql  insert-test-data.sql
.mandatory_1/05a._Webhook_System/: README.md  index.js  package-lock.json  package.json  payment.db
.mandatory_2/06a._WebSocket_Example/: index.js  package-lock.json  package.json  socketIo.js
.mandatory_2/08a._Document_A_Database/: README.md  mainservicedb_mro_docs.html
.mandatory_2/08b._Migrate_From_Databases/: ShopDbContext.cs
.mandatory_2/08c._Auth_Integration/: README.md  index.js  package-lock.json  package.json
.mandatory_2/09a._Code_Documentation/: BlobService.cs
.mandatory_2/10a._GraphQL/: index.js  package-lock.json  package.json
.mandatory_2/10b._Integrate_With_Payment/: index.js  package-lock.json  package.json
00.Assignments/00.Data_Parsing_Server/: app.js  package-lock.json  package.json
01.Miscellaneous/: google.html  googleiframe.html  stripe.html
02._Data_Files/: java.java  javascript.js  me.csv
06._Servers/node/: app.js  (+3 more)
06._Servers/python/: main.py  pyproject.toml
12._Long_Polling/: app.js  package-lock.json  package.json
13._Server-sent_Events/python/: pyproject.toml
17._Multipart-Forms/python-multipart-form/: main.py  pyproject.toml
17._Multipart-Forms/python-multipart-form/templates/: index.html
tester/: pyproject.toml
(+59 files in other folders)
