[tool.poetry]
name = "first_server"
version = "0.1.0"
description = ""
authors = ["rgodding <rashaun.godding@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
